Collection instance duplicates don't have selection outline #66295

Closed
opened 2019-07-01 11:07:49 +02:00 by artem ivanov · 9 comments

System Information
Operating system: Windows 10 64 Bits
Graphics card: GeForce GTX 1070

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-30 19:51, hash: bbb3500c97

Short description of error
Collection instance duplicates don't have selection outine when selected.

Exact steps to reproduce the error

  1. Open Blender, Load Default Settings.
  2. Add new collection (e.g. "Collection 2")
  3. Add Cube to that collection.
  4. Hide that collection in the viewport (not necessary).
  5. Add Collection Instance -> "Collection 2".
  6. Duplicate that instance via Shift-D and move it somewhere.
  7. Select duplicate -> no outline on the cube, select original collection instance -> outline is displayed.

When instance and its duplicate are selected at the same time -- outline is displayed on both.
When two duplicates of the same instance are selected at the same time -- no outline on both.

or open attached file:

collection_inst_outline_bug.blend

**System Information** Operating system: Windows 10 64 Bits Graphics card: GeForce GTX 1070 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-06-30 19:51, hash: `bbb3500c97` **Short description of error** Collection instance duplicates don't have selection outine when selected. **Exact steps to reproduce the error** 1. Open Blender, Load Default Settings. 2. Add new collection (e.g. "Collection 2") 3. Add Cube to that collection. 4. Hide that collection in the viewport (not necessary). 5. Add Collection Instance -> "Collection 2". 6. Duplicate that instance via `Shift-D` and move it somewhere. 6. Select duplicate -> no outline on the cube, select original collection instance -> outline is displayed. When instance and its duplicate are selected at the same time -- outline is displayed on both. When two duplicates of the same instance are selected at the same time -- no outline on both. or open attached file: [collection_inst_outline_bug.blend](https://archive.blender.org/developer/F7558181/collection_inst_outline_bug.blend)
Author

Added subscriber: @ixd

Added subscriber: @ixd

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Sounds similar to #64438...

Sounds similar to #64438...
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, bisecting...

Confirmed, bisecting...
Clément Foucault was assigned by Philipp Oeser 2019-07-01 12:22:33 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Looks like this broke with 6df7946f73, b6b3a57c22

@fclem: mind checking?

Looks like this broke with 6df7946f73, b6b3a57c22 @fclem: mind checking?

This issue was referenced by 57c26453f8

This issue was referenced by 57c26453f8aa3ad49a8927f5e299dcab1f2c510b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66295
No description provided.