Fix T66295 Collection instance duplicates don't have selection outline

Was cause by shgroup reuse even if select state changed from previous dupli.

Also fixes T64438 Collection Instance object highlight wrong